# SuperHydra

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
analytics/: __init__.py  effective_spread.py  slippage_calibration.py  strategy_metrics.py
core/config/: cost_model.py
docs/: advisor_review_checklist.md
docs/decisions/: 2026-05-02-data-ingestion-and-feature-store-design.md  2026-05-02-decodo-decision.md  2026-05-02-ledger-schema-design-v0.2.md  2026-05-02-ledger-schema-design-v0.3.md  2026-05-02-oms-skeleton-design-v0.2.md  2026-05-02-redemption-audit.md  2026-05-02-validation-engine-design-v0.2.md
docs/historical/: old_hydra_freeze_plan.md  old_hydra_mm_final_pnl.md
docs/migrations/: 0009_v1_15_design.md
docs/operating/: live_status_memo.md
docs/policies/: allocator_policy.md  data_policy.md  deployment_gates.md  incident_severity_policy.md  measurement_policy.md  model_policy.md  risk_policy.md
docs/postmortems/: 2026-05-01-measurement-fiction.md
docs/research/: a1_paper_research_harness.md  a1_paper_research_runner.md  replay_slippage_methodology.md  sol_roll_spread_estimation_memo.md  sol_slippage_calibration_memo.md
docs/strategies/: a1_reclassification_a2_advancement.md  a2_basis_design_brief.md  a2_complete_trade_results.md  a2_kill_action.md  (+19 more)
infra/: README.md
scripts/: candidate_4_stage_a.py  compute_sleeve_b_universe.py  empirical_a2_complete_trade_results.py  estimate_binance_roll_spread.py  refresh_a2_basis_fixture.py  refresh_binance_funding_fixture.py  run_a2_step3.py  run_candidate_4_backtest.py  run_sleeve_b_xs_momentum.py
(+142 files in other folders)
