[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superhydra"
version = "0.1.0"
description = "SuperHydra Phase 1 implementation"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-postgresql>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "data*",
    "execution*",
    "research*",
]
exclude = [
    "tests*",
    "infra*",
    "docs*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
